--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@reown/appkit": "^3.1.0", 
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -26,7 +25,8 @@
     "tailwindcss": "^3.4.1",
     "wagmi": "^2.5.7",
     "viem": "^2.9.5",
-    "ethers": "^6.11.1"
+    "ethers": "^6.11.1",
+    "@tanstack/react-query": "^5.45.1"
   },
   "devDependencies": {
     "eslint": "8.56.0",
