--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@web3modal/wagmi": "^4.1.13",
+    "@tanstack/react-query": "^5.45.1",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -23,10 +25,10 @@
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
-    "wagmi": "^2.5.7",
-    "viem": "^2.9.5",
-    "ethers": "^6.11.1",
-    "@tanstack/react-query": "^5.45.1"
+    "wagmi": "^2.10.2",
+    "@wagmi/chains": "^2.0.0",
+    "viem": "^2.16.5",
+    "ethers": "^6.11.1"
   },
   "devDependencies": {
     "eslint": "8.56.0",
