--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "wagmi": "^2.10.2",
-    "@wagmi/chains": "^2.0.0",
+    "@wagmi/chains": "latest",
     "viem": "^2.16.5",
     "ethers": "^6.11.1"
   },
